# LocoTrainer

./: .env.example  LICENSE  LocoTrainer_4B.ipynb  README.md  pyproject.toml
scripts/: README.md  setup_locotrainer.sh  setup_locotrainer_vllm.sh
src/locotrainer/: __init__.py  agent.py  cli.py  config.py  prompts.py  repo.py  tools.py
tests/: test_minimax_m27.py
